--- a/5e_artisanal_database/.htaccess
+++ b/5e_artisanal_database/.htaccess
@@ -1,3 +1,17 @@
 RewriteEngine On
 RewriteCond %{HTTP_USER_AGENT} (bot|crawl|spider|slurp) [NC]
 RewriteRule ^.*$ - [F,L]
+
+# Enable gzip compression
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+    AddOutputFilterByType DEFLATE application/json
+</IfModule>
