--- a/5e_artisanal_database/manifest.json
+++ b/5e_artisanal_database/manifest.json
@@ -1,10 +1,25 @@
 {
-  "name": "5e Artisanal Database - Disabled",
-  "short_name": "5eADB Disabled", 
-  "description": "PWA functionality has been disabled",
-  "start_url": "./index.html",
-  "display": "browser",
+  "name": "5e Artisanal Database Tools",
+  "short_name": "5eADB Tools",
+  "description": "D&D 5e tools and generators for game masters",
+  "start_url": "/index.html",
+  "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "icons": []
+  "theme_color": "#2c3e50",
+  "orientation": "portrait-primary",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "scope": "/",
+  "categories": ["games", "utilities"],
+  "lang": "en-US"
 }
